fix alignment of download button and file type in fineuploader

--- a/sass/ascribe_uploader.scss
+++ b/sass/ascribe_uploader.scss
@@ -143,6 +143,10 @@
     text-align: center;
     vertical-align: middle;
 
+    p {
+        margin-top: 5px;
+    }
+
     .action-file {
         color: white;
         cursor: pointer;
